feat: использование классов плагинов, а не игры